Gulp task updated for HTML,SASS,JS compile & minifiy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web_boilerplate",
-  "title": "web Boilerplate",
+  "title": " Web Boilerplate",
   "version": "1.0.0",
   "author": "arhanshahid.info",
   "description": "HTML5 boilerplate using jQuery, SASS/LASS, Gulp build Tasks.",
