--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "browser-sync": "^2.23.2",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.2",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.1",
     "gulp-header": "^1.8.9",
@@ -26,7 +26,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
-    "gulp-strip-comments": "^2.5.1",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "http-server": "^0.10.0"
