--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web_boilerplate",
   "title": " Web Boilerplate",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "arhanshahid.info",
   "description": "HTML5 boilerplate using jQuery, SASS/LASS, Gulp build Tasks.",
   "repository": "https://github.com/ArhanShahid/web-boilerplate.git",
@@ -24,6 +24,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.4.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^3.0.0",
